# mcp-agentic-rag

./: README.md  env.example  pyproject.toml  rag.py  server.py
data/: README.md  deepseek_info.txt
